a friendly meta commit, #245277

--- a/.gitmodules
+++ b/.gitmodules
@@ -2470,6 +2470,9 @@
 [submodule "bp/te/rts"]
 	path = bp/te/rts
 	url = .
+[submodule "bp/ty/gbi"]
+	path = bp/ty/gbi
+	url = .
 [submodule "bp/vq/rfp"]
 	path = bp/vq/rfp
 	url = .
