--- a/.gitmodules
+++ b/.gitmodules
@@ -3151,6 +3151,9 @@
 [submodule "bz/ua/igx"]
 	path = bz/ua/igx
 	url = .
+[submodule "bz/uh/ytg"]
+	path = bz/uh/ytg
+	url = .
 [submodule "bz/ut/sjt"]
 	path = bz/ut/sjt
 	url = .
