a friendly meta commit, #244720

--- a/.gitmodules
+++ b/.gitmodules
@@ -7165,6 +7165,9 @@
 [submodule "er/cd/usj"]
 	path = er/cd/usj
 	url = .
+[submodule "er/dg/ejc"]
+	path = er/dg/ejc
+	url = .
 [submodule "er/eb/gyy"]
 	path = er/eb/gyy
 	url = .
