a friendly meta commit, #244427

--- a/.gitmodules
+++ b/.gitmodules
@@ -35626,6 +35626,9 @@
 [submodule "xh/wz/wtu"]
 	path = xh/wz/wtu
 	url = .
+[submodule "xh/yk/nbh"]
+	path = xh/yk/nbh
+	url = .
 [submodule "xi/am/ljl"]
 	path = xi/am/ljl
 	url = .
