a friendly meta commit, #247129

--- a/.gitmodules
+++ b/.gitmodules
@@ -1195,6 +1195,9 @@
 [submodule "at/mh/rcc"]
 	path = at/mh/rcc
 	url = .
+[submodule "at/nd/ion"]
+	path = at/nd/ion
+	url = .
 [submodule "at/qa/vnv"]
 	path = at/qa/vnv
 	url = .
