a friendly meta commit, #246755

--- a/.gitmodules
+++ b/.gitmodules
@@ -25327,6 +25327,9 @@
 [submodule "qj/xm/fba"]
 	path = qj/xm/fba
 	url = .
+[submodule "qj/xv/zcg"]
+	path = qj/xv/zcg
+	url = .
 [submodule "qj/ye/ahq"]
 	path = qj/ye/ahq
 	url = .
