--- a/.gitmodules
+++ b/.gitmodules
@@ -24223,6 +24223,9 @@
 [submodule "po/xw/ckl"]
 	path = po/xw/ckl
 	url = .
+[submodule "po/zq/crw"]
+	path = po/zq/crw
+	url = .
 [submodule "po/zs/sln"]
 	path = po/zs/sln
 	url = .
