a friendly meta commit, #245517

--- a/.gitmodules
+++ b/.gitmodules
@@ -29167,6 +29167,9 @@
 [submodule "sw/ji/evb"]
 	path = sw/ji/evb
 	url = .
+[submodule "sw/oq/ybi"]
+	path = sw/oq/ybi
+	url = .
 [submodule "sw/rg/pqh"]
 	path = sw/rg/pqh
 	url = .
