a friendly meta commit, #246744

--- a/.gitmodules
+++ b/.gitmodules
@@ -20992,6 +20992,9 @@
 [submodule "no/jx/chh"]
 	path = no/jx/chh
 	url = .
+[submodule "no/kz/drt"]
+	path = no/kz/drt
+	url = .
 [submodule "no/mb/pib"]
 	path = no/mb/pib
 	url = .
