a friendly meta commit, #245917

--- a/.gitmodules
+++ b/.gitmodules
@@ -37813,6 +37813,9 @@
 [submodule "ys/ba/txs"]
 	path = ys/ba/txs
 	url = .
+[submodule "ys/ec/pyy"]
+	path = ys/ec/pyy
+	url = .
 [submodule "ys/et/vnj"]
 	path = ys/et/vnj
 	url = .
