a friendly meta commit, #245204

--- a/.gitmodules
+++ b/.gitmodules
@@ -27826,6 +27826,9 @@
 [submodule "rz/rf/jtb"]
 	path = rz/rf/jtb
 	url = .
+[submodule "rz/se/pcw"]
+	path = rz/se/pcw
+	url = .
 [submodule "rz/sn/mfp"]
 	path = rz/sn/mfp
 	url = .
