a friendly meta commit, #247442

--- a/.gitmodules
+++ b/.gitmodules
@@ -39469,6 +39469,9 @@
 [submodule "zt/ki/dij"]
 	path = zt/ki/dij
 	url = .
+[submodule "zt/mj/wsl"]
+	path = zt/mj/wsl
+	url = .
 [submodule "zt/nv/mnh"]
 	path = zt/nv/mnh
 	url = .
