a friendly meta commit, #245881

--- a/.gitmodules
+++ b/.gitmodules
@@ -34471,6 +34471,9 @@
 [submodule "wm/qv/nnj"]
 	path = wm/qv/nnj
 	url = .
+[submodule "wm/rb/kcv"]
+	path = wm/rb/kcv
+	url = .
 [submodule "wm/ro/eeo"]
 	path = wm/ro/eeo
 	url = .
