a friendly meta commit, #245273

--- a/.gitmodules
+++ b/.gitmodules
@@ -22456,6 +22456,9 @@
 [submodule "on/tk/yef"]
 	path = on/tk/yef
 	url = .
+[submodule "on/ul/lng"]
+	path = on/ul/lng
+	url = .
 [submodule "on/ur/jba"]
 	path = on/ur/jba
 	url = .
