a friendly meta commit, #246421

--- a/.gitmodules
+++ b/.gitmodules
@@ -15424,6 +15424,9 @@
 [submodule "jz/ts/mje"]
 	path = jz/ts/mje
 	url = .
+[submodule "jz/uf/whj"]
+	path = jz/uf/whj
+	url = .
 [submodule "jz/vf/ksx"]
 	path = jz/vf/ksx
 	url = .
