a friendly meta commit, #245426

--- a/.gitmodules
+++ b/.gitmodules
@@ -26998,6 +26998,9 @@
 [submodule "rm/iz/vnl"]
 	path = rm/iz/vnl
 	url = .
+[submodule "rm/kh/wkq"]
+	path = rm/kh/wkq
+	url = .
 [submodule "rm/ld/bnx"]
 	path = rm/ld/bnx
 	url = .
