a friendly meta commit, #244306

--- a/.gitmodules
+++ b/.gitmodules
@@ -29692,6 +29692,9 @@
 [submodule "ti/kl/ijy"]
 	path = ti/kl/ijy
 	url = .
+[submodule "ti/lk/txw"]
+	path = ti/lk/txw
+	url = .
 [submodule "ti/ln/cmg"]
 	path = ti/ln/cmg
 	url = .
