a friendly meta commit, #249299

--- a/.gitmodules
+++ b/.gitmodules
@@ -16951,6 +16951,9 @@
 [submodule "ky/xx/cdf"]
 	path = ky/xx/cdf
 	url = .
+[submodule "ky/yy/hxg"]
+	path = ky/yy/hxg
+	url = .
 [submodule "ky/zw/fpe"]
 	path = ky/zw/fpe
 	url = .
