a friendly meta commit, #249323

--- a/.gitmodules
+++ b/.gitmodules
@@ -6985,6 +6985,9 @@
 [submodule "em/oy/ecv"]
 	path = em/oy/ecv
 	url = .
+[submodule "em/pj/enz"]
+	path = em/pj/enz
+	url = .
 [submodule "em/tr/qpx"]
 	path = em/tr/qpx
 	url = .
