a friendly meta commit, #250710

--- a/.gitmodules
+++ b/.gitmodules
@@ -36067,6 +36067,9 @@
 [submodule "xg/ki/tji"]
 	path = xg/ki/tji
 	url = .
+[submodule "xg/lc/una"]
+	path = xg/lc/una
+	url = .
 [submodule "xg/os/amf"]
 	path = xg/os/amf
 	url = .
