a friendly meta commit, #248651

--- a/.gitmodules
+++ b/.gitmodules
@@ -31864,6 +31864,9 @@
 [submodule "uo/ud/ezi"]
 	path = uo/ud/ezi
 	url = .
+[submodule "up/as/tyl"]
+	path = up/as/tyl
+	url = .
 [submodule "up/be/ihj"]
 	path = up/be/ihj
 	url = .
