a friendly meta commit, #248143

--- a/.gitmodules
+++ b/.gitmodules
@@ -23446,6 +23446,9 @@
 [submodule "pb/qh/mhp"]
 	path = pb/qh/mhp
 	url = .
+[submodule "pb/rf/qtb"]
+	path = pb/rf/qtb
+	url = .
 [submodule "pb/ri/kfs"]
 	path = pb/ri/kfs
 	url = .
