a friendly meta commit, #248394

--- a/.gitmodules
+++ b/.gitmodules
@@ -22882,6 +22882,9 @@
 [submodule "os/mq/jyi"]
 	path = os/mq/jyi
 	url = .
+[submodule "os/ob/fzm"]
+	path = os/ob/fzm
+	url = .
 [submodule "os/ol/jjg"]
 	path = os/ol/jjg
 	url = .
