--- a/.gitmodules
+++ b/.gitmodules
@@ -27322,6 +27322,9 @@
 [submodule "rn/yl/trl"]
 	path = rn/yl/trl
 	url = .
+[submodule "rn/ys/pla"]
+	path = rn/ys/pla
+	url = .
 [submodule "rn/zb/dau"]
 	path = rn/zb/dau
 	url = .
