a friendly meta commit, #249377

--- a/.gitmodules
+++ b/.gitmodules
@@ -26455,6 +26455,9 @@
 [submodule "qz/bn/wcs"]
 	path = qz/bn/wcs
 	url = .
+[submodule "qz/ct/eho"]
+	path = qz/ct/eho
+	url = .
 [submodule "qz/dn/fuq"]
 	path = qz/dn/fuq
 	url = .
