a friendly meta commit, #249123

--- a/.gitmodules
+++ b/.gitmodules
@@ -38389,6 +38389,9 @@
 [submodule "yw/zs/qww"]
 	path = yw/zs/qww
 	url = .
+[submodule "yx/aq/dwq"]
+	path = yx/aq/dwq
+	url = .
 [submodule "yx/bd/xoj"]
 	path = yx/bd/xoj
 	url = .
