--- a/.gitmodules
+++ b/.gitmodules
@@ -20254,6 +20254,9 @@
 [submodule "mz/jq/qdq"]
 	path = mz/jq/qdq
 	url = .
+[submodule "mz/kh/rmj"]
+	path = mz/kh/rmj
+	url = .
 [submodule "mz/lg/aek"]
 	path = mz/lg/aek
 	url = .
