--- a/.gitmodules
+++ b/.gitmodules
@@ -25174,6 +25174,9 @@
 [submodule "qf/ud/hdf"]
 	path = qf/ud/hdf
 	url = .
+[submodule "qf/vv/icj"]
+	path = qf/vv/icj
+	url = .
 [submodule "qf/xn/ivb"]
 	path = qf/xn/ivb
 	url = .
