a friendly meta commit, #248456

--- a/.gitmodules
+++ b/.gitmodules
@@ -12871,6 +12871,9 @@
 [submodule "ii/mj/vkk"]
 	path = ii/mj/vkk
 	url = .
+[submodule "ii/mn/dou"]
+	path = ii/mn/dou
+	url = .
 [submodule "ii/mx/rgq"]
 	path = ii/mx/rgq
 	url = .
