a friendly meta commit, #247813

--- a/.gitmodules
+++ b/.gitmodules
@@ -38821,6 +38821,9 @@
 [submodule "zg/yf/ovy"]
 	path = zg/yf/ovy
 	url = .
+[submodule "zg/ym/vjo"]
+	path = zg/ym/vjo
+	url = .
 [submodule "zg/yz/dtx"]
 	path = zg/yz/dtx
 	url = .
