a friendly meta commit, #250467

--- a/.gitmodules
+++ b/.gitmodules
@@ -28975,6 +28975,9 @@
 [submodule "sm/wx/nje"]
 	path = sm/wx/nje
 	url = .
+[submodule "sm/zr/xrl"]
+	path = sm/zr/xrl
+	url = .
 [submodule "sn/cd/mbb"]
 	path = sn/cd/mbb
 	url = .
