a friendly meta commit, #249273

--- a/.gitmodules
+++ b/.gitmodules
@@ -23998,6 +23998,9 @@
 [submodule "pj/az/tkj"]
 	path = pj/az/tkj
 	url = .
+[submodule "pj/bk/xca"]
+	path = pj/bk/xca
+	url = .
 [submodule "pj/ds/ncj"]
 	path = pj/ds/ncj
 	url = .
