a friendly meta commit, #249601

--- a/.gitmodules
+++ b/.gitmodules
@@ -39463,6 +39463,9 @@
 [submodule "zp/ni/cch"]
 	path = zp/ni/cch
 	url = .
+[submodule "zp/nu/srw"]
+	path = zp/nu/srw
+	url = .
 [submodule "zp/og/pop"]
 	path = zp/og/pop
 	url = .
