--- a/.gitmodules
+++ b/.gitmodules
@@ -39619,6 +39619,9 @@
 [submodule "zu/re/zoo"]
 	path = zu/re/zoo
 	url = .
+[submodule "zu/rp/ied"]
+	path = zu/rp/ied
+	url = .
 [submodule "zu/sg/lpu"]
 	path = zu/sg/lpu
 	url = .
