a friendly meta commit, #249840

--- a/.gitmodules
+++ b/.gitmodules
@@ -30535,6 +30535,9 @@
 [submodule "tp/wh/yuj"]
 	path = tp/wh/yuj
 	url = .
+[submodule "tp/xi/wed"]
+	path = tp/xi/wed
+	url = .
 [submodule "tq/ah/zvn"]
 	path = tq/ah/zvn
 	url = .
