--- a/.gitmodules
+++ b/.gitmodules
@@ -4657,6 +4657,9 @@
 [submodule "da/gr/rnd"]
 	path = da/gr/rnd
 	url = .
+[submodule "da/ji/loh"]
+	path = da/ji/loh
+	url = .
 [submodule "da/lf/kol"]
 	path = da/lf/kol
 	url = .
