a friendly meta commit, #248036

--- a/.gitmodules
+++ b/.gitmodules
@@ -5950,6 +5950,9 @@
 [submodule "du/gy/mud"]
 	path = du/gy/mud
 	url = .
+[submodule "du/iw/qpq"]
+	path = du/iw/qpq
+	url = .
 [submodule "du/md/ric"]
 	path = du/md/ric
 	url = .
