a friendly meta commit, #249373

--- a/.gitmodules
+++ b/.gitmodules
@@ -16987,6 +16987,9 @@
 [submodule "kz/ka/rnd"]
 	path = kz/ka/rnd
 	url = .
+[submodule "kz/lq/zph"]
+	path = kz/lq/zph
+	url = .
 [submodule "kz/nd/bxm"]
 	path = kz/nd/bxm
 	url = .
