a friendly meta commit, #249522

--- a/.gitmodules
+++ b/.gitmodules
@@ -6607,6 +6607,9 @@
 [submodule "ef/lf/tes"]
 	path = ef/lf/tes
 	url = .
+[submodule "ef/nu/xaj"]
+	path = ef/nu/xaj
+	url = .
 [submodule "ef/qd/qvb"]
 	path = ef/qd/qvb
 	url = .
