a friendly meta commit, #248783

--- a/.gitmodules
+++ b/.gitmodules
@@ -13852,6 +13852,9 @@
 [submodule "iy/nl/jxa"]
 	path = iy/nl/jxa
 	url = .
+[submodule "iy/nt/wtc"]
+	path = iy/nt/wtc
+	url = .
 [submodule "iy/ny/vlq"]
 	path = iy/ny/vlq
 	url = .
