a friendly meta commit, #248050

--- a/.gitmodules
+++ b/.gitmodules
@@ -6172,6 +6172,9 @@
 [submodule "dy/bm/vlm"]
 	path = dy/bm/vlm
 	url = .
+[submodule "dy/de/eck"]
+	path = dy/de/eck
+	url = .
 [submodule "dy/dy/fvl"]
 	path = dy/dy/fvl
 	url = .
