a friendly meta commit, #250196

--- a/.gitmodules
+++ b/.gitmodules
@@ -27145,6 +27145,9 @@
 [submodule "rj/yd/adn"]
 	path = rj/yd/adn
 	url = .
+[submodule "rj/zx/zuo"]
+	path = rj/zx/zuo
+	url = .
 [submodule "rk/ae/ptm"]
 	path = rk/ae/ptm
 	url = .
