a friendly meta commit, #247902

--- a/.gitmodules
+++ b/.gitmodules
@@ -32674,6 +32674,9 @@
 [submodule "vf/ob/epk"]
 	path = vf/ob/epk
 	url = .
+[submodule "vf/oh/twz"]
+	path = vf/oh/twz
+	url = .
 [submodule "vf/pe/yfo"]
 	path = vf/pe/yfo
 	url = .
