a friendly meta commit, #249039

--- a/.gitmodules
+++ b/.gitmodules
@@ -9787,6 +9787,9 @@
 [submodule "gf/un/jtb"]
 	path = gf/un/jtb
 	url = .
+[submodule "gf/vw/mlc"]
+	path = gf/vw/mlc
+	url = .
 [submodule "gf/xa/cmr"]
 	path = gf/xa/cmr
 	url = .
