a friendly meta commit, #247744

--- a/.gitmodules
+++ b/.gitmodules
@@ -28666,6 +28666,9 @@
 [submodule "sk/uv/ada"]
 	path = sk/uv/ada
 	url = .
+[submodule "sk/vf/ivt"]
+	path = sk/vf/ivt
+	url = .
 [submodule "sk/vs/ekl"]
 	path = sk/vs/ekl
 	url = .
