a friendly meta commit, #247980

--- a/.gitmodules
+++ b/.gitmodules
@@ -31687,6 +31687,9 @@
 [submodule "um/pu/enj"]
 	path = um/pu/enj
 	url = .
+[submodule "um/rw/wdp"]
+	path = um/rw/wdp
+	url = .
 [submodule "um/uz/ave"]
 	path = um/uz/ave
 	url = .
