a friendly meta commit, #248385

--- a/.gitmodules
+++ b/.gitmodules
@@ -31765,6 +31765,9 @@
 [submodule "un/ml/bxc"]
 	path = un/ml/bxc
 	url = .
+[submodule "un/na/liu"]
+	path = un/na/liu
+	url = .
 [submodule "un/pn/pjp"]
 	path = un/pn/pjp
 	url = .
