a friendly meta commit, #248082

--- a/.gitmodules
+++ b/.gitmodules
@@ -28015,6 +28015,9 @@
 [submodule "rz/nr/jjf"]
 	path = rz/nr/jjf
 	url = .
+[submodule "rz/qp/hzb"]
+	path = rz/qp/hzb
+	url = .
 [submodule "rz/rf/jtb"]
 	path = rz/rf/jtb
 	url = .
