a friendly meta commit, #250567

--- a/.gitmodules
+++ b/.gitmodules
@@ -31099,6 +31099,9 @@
 [submodule "ty/wj/dqx"]
 	path = ty/wj/dqx
 	url = .
+[submodule "ty/xe/nol"]
+	path = ty/xe/nol
+	url = .
 [submodule "ty/xo/icd"]
 	path = ty/xo/icd
 	url = .
