--- a/.gitmodules
+++ b/.gitmodules
@@ -8641,6 +8641,9 @@
 [submodule "fo/yp/tse"]
 	path = fo/yp/tse
 	url = .
+[submodule "fo/zp/ene"]
+	path = fo/zp/ene
+	url = .
 [submodule "fp/cn/kya"]
 	path = fp/cn/kya
 	url = .
