a friendly meta commit, #249767

--- a/.gitmodules
+++ b/.gitmodules
@@ -24019,6 +24019,9 @@
 [submodule "pj/an/bte"]
 	path = pj/an/bte
 	url = .
+[submodule "pj/an/qcr"]
+	path = pj/an/qcr
+	url = .
 [submodule "pj/az/tkj"]
 	path = pj/az/tkj
 	url = .
