a friendly meta commit, #250998

--- a/.gitmodules
+++ b/.gitmodules
@@ -18970,6 +18970,9 @@
 [submodule "mf/nq/vze"]
 	path = mf/nq/vze
 	url = .
+[submodule "mf/ol/jww"]
+	path = mf/ol/jww
+	url = .
 [submodule "mf/or/cyx"]
 	path = mf/or/cyx
 	url = .
