--- a/.gitmodules
+++ b/.gitmodules
@@ -32758,6 +32758,9 @@
 [submodule "vf/se/hwb"]
 	path = vf/se/hwb
 	url = .
+[submodule "vf/xd/tgn"]
+	path = vf/xd/tgn
+	url = .
 [submodule "vf/xo/drk"]
 	path = vf/xo/drk
 	url = .
