a friendly meta commit, #249460

--- a/.gitmodules
+++ b/.gitmodules
@@ -1441,6 +1441,9 @@
 [submodule "ax/jv/eyo"]
 	path = ax/jv/eyo
 	url = .
+[submodule "ax/kz/ndd"]
+	path = ax/kz/ndd
+	url = .
 [submodule "ax/mp/hbt"]
 	path = ax/mp/hbt
 	url = .
