a friendly meta commit, #250756

--- a/.gitmodules
+++ b/.gitmodules
@@ -18196,6 +18196,9 @@
 [submodule "ls/nm/zco"]
 	path = ls/nm/zco
 	url = .
+[submodule "ls/nr/pxw"]
+	path = ls/nr/pxw
+	url = .
 [submodule "ls/nw/bgl"]
 	path = ls/nw/bgl
 	url = .
