a friendly meta commit, #248013

--- a/.gitmodules
+++ b/.gitmodules
@@ -27898,6 +27898,9 @@
 [submodule "ry/ap/uql"]
 	path = ry/ap/uql
 	url = .
+[submodule "ry/br/cbf"]
+	path = ry/br/cbf
+	url = .
 [submodule "ry/cb/dqe"]
 	path = ry/cb/dqe
 	url = .
