a friendly meta commit, #249050

--- a/.gitmodules
+++ b/.gitmodules
@@ -5230,6 +5230,9 @@
 [submodule "di/zi/fuo"]
 	path = di/zi/fuo
 	url = .
+[submodule "dj/au/mjp"]
+	path = dj/au/mjp
+	url = .
 [submodule "dj/bd/rsa"]
 	path = dj/bd/rsa
 	url = .
