a friendly meta commit, #248523

--- a/.gitmodules
+++ b/.gitmodules
@@ -27247,6 +27247,9 @@
 [submodule "rn/bx/rxu"]
 	path = rn/bx/rxu
 	url = .
+[submodule "rn/bz/jxn"]
+	path = rn/bz/jxn
+	url = .
 [submodule "rn/bz/oxz"]
 	path = rn/bz/oxz
 	url = .
