a friendly meta commit, #249733

--- a/.gitmodules
+++ b/.gitmodules
@@ -21139,6 +21139,9 @@
 [submodule "no/mv/jye"]
 	path = no/mv/jye
 	url = .
+[submodule "no/ne/trb"]
+	path = no/ne/trb
+	url = .
 [submodule "no/po/fro"]
 	path = no/po/fro
 	url = .
