a friendly meta commit, #247615

--- a/.gitmodules
+++ b/.gitmodules
@@ -38242,6 +38242,9 @@
 [submodule "yw/pu/jrl"]
 	path = yw/pu/jrl
 	url = .
+[submodule "yw/sp/lus"]
+	path = yw/sp/lus
+	url = .
 [submodule "yw/vg/hse"]
 	path = yw/vg/hse
 	url = .
