a friendly meta commit, #249094

--- a/.gitmodules
+++ b/.gitmodules
@@ -724,6 +724,9 @@
 [submodule "al/ll/qxy"]
 	path = al/ll/qxy
 	url = .
+[submodule "al/mj/iwf"]
+	path = al/mj/iwf
+	url = .
 [submodule "al/nd/oul"]
 	path = al/nd/oul
 	url = .
