a friendly meta commit, #248226

--- a/.gitmodules
+++ b/.gitmodules
@@ -13735,6 +13735,9 @@
 [submodule "iw/yz/lir"]
 	path = iw/yz/lir
 	url = .
+[submodule "iw/zm/fjo"]
+	path = iw/zm/fjo
+	url = .
 [submodule "ix/bf/xnz"]
 	path = ix/bf/xnz
 	url = .
