a friendly meta commit, #250267

--- a/.gitmodules
+++ b/.gitmodules
@@ -35629,6 +35629,9 @@
 [submodule "xa/qi/vif"]
 	path = xa/qi/vif
 	url = .
+[submodule "xa/tf/acc"]
+	path = xa/tf/acc
+	url = .
 [submodule "xa/th/opz"]
 	path = xa/th/opz
 	url = .
