a friendly meta commit, #251035

--- a/.gitmodules
+++ b/.gitmodules
@@ -32287,6 +32287,9 @@
 [submodule "uu/wn/aai"]
 	path = uu/wn/aai
 	url = .
+[submodule "uu/wr/ame"]
+	path = uu/wr/ame
+	url = .
 [submodule "uu/xc/qlx"]
 	path = uu/xc/qlx
 	url = .
