a friendly meta commit, #249585

--- a/.gitmodules
+++ b/.gitmodules
@@ -39160,6 +39160,9 @@
 [submodule "zk/cp/ujw"]
 	path = zk/cp/ujw
 	url = .
+[submodule "zk/cx/cbd"]
+	path = zk/cx/cbd
+	url = .
 [submodule "zk/ef/iiq"]
 	path = zk/ef/iiq
 	url = .
