a friendly meta commit, #250696

--- a/.gitmodules
+++ b/.gitmodules
@@ -10432,6 +10432,9 @@
 [submodule "gp/uh/zsz"]
 	path = gp/uh/zsz
 	url = .
+[submodule "gp/vy/xyu"]
+	path = gp/vy/xyu
+	url = .
 [submodule "gp/wz/ttk"]
 	path = gp/wz/ttk
 	url = .
