a friendly meta commit, #250836

--- a/.gitmodules
+++ b/.gitmodules
@@ -22039,6 +22039,9 @@
 [submodule "oc/xs/iln"]
 	path = oc/xs/iln
 	url = .
+[submodule "oc/zy/mgl"]
+	path = oc/zy/mgl
+	url = .
 [submodule "od/aa/jvi"]
 	path = od/aa/jvi
 	url = .
