a friendly meta commit, #248301

--- a/.gitmodules
+++ b/.gitmodules
@@ -36589,6 +36589,9 @@
 [submodule "xs/bd/scf"]
 	path = xs/bd/scf
 	url = .
+[submodule "xs/bv/ymp"]
+	path = xs/bv/ymp
+	url = .
 [submodule "xs/cc/utt"]
 	path = xs/cc/utt
 	url = .
