a friendly meta commit, #247909

--- a/.gitmodules
+++ b/.gitmodules
@@ -27268,6 +27268,9 @@
 [submodule "rn/yl/trl"]
 	path = rn/yl/trl
 	url = .
+[submodule "rn/zb/dau"]
+	path = rn/zb/dau
+	url = .
 [submodule "rn/zd/kxo"]
 	path = rn/zd/kxo
 	url = .
