a friendly meta commit, #250415

--- a/.gitmodules
+++ b/.gitmodules
@@ -13855,6 +13855,9 @@
 [submodule "ix/wa/tff"]
 	path = ix/wa/tff
 	url = .
+[submodule "ix/wl/jti"]
+	path = ix/wl/jti
+	url = .
 [submodule "ix/xl/fdc"]
 	path = ix/xl/fdc
 	url = .
