--- a/.gitmodules
+++ b/.gitmodules
@@ -23032,6 +23032,9 @@
 [submodule "or/rh/aft"]
 	path = or/rh/aft
 	url = .
+[submodule "or/vf/cfh"]
+	path = or/vf/cfh
+	url = .
 [submodule "or/vg/cnt"]
 	path = or/vg/cnt
 	url = .
