a friendly meta commit, #253352

--- a/.gitmodules
+++ b/.gitmodules
@@ -39403,6 +39403,9 @@
 [submodule "zj/cz/svq"]
 	path = zj/cz/svq
 	url = .
+[submodule "zj/et/dtc"]
+	path = zj/et/dtc
+	url = .
 [submodule "zj/fw/emf"]
 	path = zj/fw/emf
 	url = .
