a friendly meta commit, #252238

--- a/.gitmodules
+++ b/.gitmodules
@@ -29779,6 +29779,9 @@
 [submodule "sz/dv/skx"]
 	path = sz/dv/skx
 	url = .
+[submodule "sz/em/rev"]
+	path = sz/em/rev
+	url = .
 [submodule "sz/ew/bga"]
 	path = sz/ew/bga
 	url = .
