a friendly meta commit, #251077

--- a/.gitmodules
+++ b/.gitmodules
@@ -13792,6 +13792,9 @@
 [submodule "iw/tn/zgi"]
 	path = iw/tn/zgi
 	url = .
+[submodule "iw/ud/ffa"]
+	path = iw/ud/ffa
+	url = .
 [submodule "iw/wd/pzh"]
 	path = iw/wd/pzh
 	url = .
