a friendly meta commit, #253888

--- a/.gitmodules
+++ b/.gitmodules
@@ -9475,6 +9475,9 @@
 [submodule "fz/hq/xuo"]
 	path = fz/hq/xuo
 	url = .
+[submodule "fz/jm/rac"]
+	path = fz/jm/rac
+	url = .
 [submodule "fz/lf/ubw"]
 	path = fz/lf/ubw
 	url = .
