a friendly meta commit, #252896

--- a/.gitmodules
+++ b/.gitmodules
@@ -14494,6 +14494,9 @@
 [submodule "jg/fy/onk"]
 	path = jg/fy/onk
 	url = .
+[submodule "jg/hj/yrm"]
+	path = jg/hj/yrm
+	url = .
 [submodule "jg/hq/adt"]
 	path = jg/hq/adt
 	url = .
