a friendly meta commit, #254413

--- a/.gitmodules
+++ b/.gitmodules
@@ -23431,6 +23431,9 @@
 [submodule "ow/my/hhp"]
 	path = ow/my/hhp
 	url = .
+[submodule "ow/nh/wzu"]
+	path = ow/nh/wzu
+	url = .
 [submodule "ow/of/jkq"]
 	path = ow/of/jkq
 	url = .
