a friendly meta commit, #253774

--- a/.gitmodules
+++ b/.gitmodules
@@ -37762,6 +37762,9 @@
 [submodule "yg/jr/mll"]
 	path = yg/jr/mll
 	url = .
+[submodule "yg/kf/xbd"]
+	path = yg/kf/xbd
+	url = .
 [submodule "yg/kq/iqu"]
 	path = yg/kq/iqu
 	url = .
