a friendly meta commit, #252829

--- a/.gitmodules
+++ b/.gitmodules
@@ -13693,6 +13693,9 @@
 [submodule "it/wy/vct"]
 	path = it/wy/vct
 	url = .
+[submodule "it/zn/xcn"]
+	path = it/zn/xcn
+	url = .
 [submodule "iu/cc/trr"]
 	path = iu/cc/trr
 	url = .
