a friendly meta commit, #252308

--- a/.gitmodules
+++ b/.gitmodules
@@ -39916,6 +39916,9 @@
 [submodule "zt/yb/lpw"]
 	path = zt/yb/lpw
 	url = .
+[submodule "zt/zr/ppq"]
+	path = zt/zr/ppq
+	url = .
 [submodule "zu/cv/yfl"]
 	path = zu/cv/yfl
 	url = .
