--- a/.gitmodules
+++ b/.gitmodules
@@ -36427,6 +36427,9 @@
 [submodule "xj/vs/owa"]
 	path = xj/vs/owa
 	url = .
+[submodule "xj/vv/kdb"]
+	path = xj/vv/kdb
+	url = .
 [submodule "xj/wr/yyk"]
 	path = xj/wr/yyk
 	url = .
