a friendly meta commit, #253661

--- a/.gitmodules
+++ b/.gitmodules
@@ -23776,6 +23776,9 @@
 [submodule "pc/kb/tnr"]
 	path = pc/kb/tnr
 	url = .
+[submodule "pc/lz/lei"]
+	path = pc/lz/lei
+	url = .
 [submodule "pc/mh/vjl"]
 	path = pc/mh/vjl
 	url = .
