a friendly meta commit, #252587

--- a/.gitmodules
+++ b/.gitmodules
@@ -37942,6 +37942,9 @@
 [submodule "yl/cl/eck"]
 	path = yl/cl/eck
 	url = .
+[submodule "yl/dd/tkv"]
+	path = yl/dd/tkv
+	url = .
 [submodule "yl/fb/ufn"]
 	path = yl/fb/ufn
 	url = .
