a friendly meta commit, #254160

--- a/.gitmodules
+++ b/.gitmodules
@@ -36913,6 +36913,9 @@
 [submodule "xp/uv/vsj"]
 	path = xp/uv/vsj
 	url = .
+[submodule "xp/vn/utw"]
+	path = xp/vn/utw
+	url = .
 [submodule "xp/wi/dvi"]
 	path = xp/wi/dvi
 	url = .
