a friendly meta commit, #253476

--- a/.gitmodules
+++ b/.gitmodules
@@ -36958,6 +36958,9 @@
 [submodule "xr/mq/kff"]
 	path = xr/mq/kff
 	url = .
+[submodule "xr/on/ydu"]
+	path = xr/on/ydu
+	url = .
 [submodule "xr/os/yqr"]
 	path = xr/os/yqr
 	url = .
