a friendly meta commit, #251842

--- a/.gitmodules
+++ b/.gitmodules
@@ -13624,6 +13624,9 @@
 [submodule "it/gj/zxa"]
 	path = it/gj/zxa
 	url = .
+[submodule "it/hd/vyk"]
+	path = it/hd/vyk
+	url = .
 [submodule "it/iw/dhd"]
 	path = it/iw/dhd
 	url = .
