a friendly meta commit, #253819

--- a/.gitmodules
+++ b/.gitmodules
@@ -30679,6 +30679,9 @@
 [submodule "tn/up/kbp"]
 	path = tn/up/kbp
 	url = .
+[submodule "tn/vy/myl"]
+	path = tn/vy/myl
+	url = .
 [submodule "tn/wk/cny"]
 	path = tn/wk/cny
 	url = .
