--- a/.gitmodules
+++ b/.gitmodules
@@ -35938,6 +35938,9 @@
 [submodule "xd/ys/ysu"]
 	path = xd/ys/ysu
 	url = .
+[submodule "xd/zp/zzm"]
+	path = xd/zp/zzm
+	url = .
 [submodule "xe/aa/odv"]
 	path = xe/aa/odv
 	url = .
