a friendly meta commit, #253180

--- a/.gitmodules
+++ b/.gitmodules
@@ -26404,6 +26404,9 @@
 [submodule "qu/vf/dgg"]
 	path = qu/vf/dgg
 	url = .
+[submodule "qu/wb/wmj"]
+	path = qu/wb/wmj
+	url = .
 [submodule "qu/wj/eda"]
 	path = qu/wj/eda
 	url = .
