--- a/.gitmodules
+++ b/.gitmodules
@@ -7147,6 +7147,9 @@
 [submodule "eo/ay/xej"]
 	path = eo/ay/xej
 	url = .
+[submodule "eo/ba/nte"]
+	path = eo/ba/nte
+	url = .
 [submodule "eo/bq/wxb"]
 	path = eo/bq/wxb
 	url = .
